Add initial version 0.1

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: pahwq.shiny
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Shiny App for PAH phototoxicity and Water Quality Guideline calculations
+Version: 0.1
 Authors@R: c(
     person("Andy", "Teucher", , "andy.teucher@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7840-692X")),
@@ -11,7 +11,7 @@ License: Apache License (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
-Imports: 
+Imports:
     bsicons,
     bslib,
     htmlwidgets,
@@ -24,5 +24,5 @@ Imports:
     ggiraph,
     shinycssloaders,
     DT
-Remotes: 
+Remotes:
     bcgov/pahwq
